# data-cpp

./: .gitignore  .travis.yml  DataCpp.podspec
projects/android-studio/: settings.gradle
projects/android-studio/app/: build.gradle
projects/android-studio/app/src/androidTest/java/com/lufinkey/datacpp/: ExampleInstrumentedTest.java
projects/android-studio/app/src/androidTest/java/com/lufinkey/datacpptestapp/: ExampleInstrumentedTest.java
projects/android-studio/app/src/main/: AndroidManifest.xml
projects/android-studio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/android-studio/app/src/main/java/com/lufinkey/datacpp/: MainActivity.java
projects/android-studio/app/src/main/java/com/lufinkey/datacpptestapp/: MainActivity.java
projects/android-studio/app/src/main/res/values/: strings.xml
projects/android-studio/app/src/test/java/com/lufinkey/datacpp/: ExampleUnitTest.java
projects/android-studio/app/src/test/java/com/lufinkey/datacpptestapp/: ExampleUnitTest.java
projects/android-studio/gradle/wrapper/: gradle-wrapper.properties
projects/android-studio/libdatacpp/: build.gradle
projects/android-studio/libdatacpp/src/androidTest/java/com/lufinkey/libdatacpp/: ExampleInstrumentedTest.java
projects/android-studio/libdatacpp/src/main/: AndroidManifest.xml
projects/android-studio/libdatacpp/src/main/cpp/: CMakeLists.txt  _unused.cpp
projects/android-studio/libdatacpp/src/main/res/values/: strings.xml
projects/android-studio/libdatacpp/src/test/java/com/lufinkey/libdatacpp/: ExampleUnitTest.java
projects/xcode-ios/DataCpp.xcodeproj/: project.pbxproj
projects/xcode/DataCpp.xcodeproj/: project.pbxproj
projects/xcode/DataCpp.xcworkspace/: contents.xcworkspacedata
src/fgl/: data.hpp
src/fgl/crypto/: MD5.cpp  MD5.hpp
src/fgl/data/: Any.cpp  Any.hpp  ArrayList.hpp  BasicList.hpp  BasicString.hpp  BasicString.impl.hpp  BasicStringUtils.hpp  Common.hpp  Data.cpp  Data.hpp  Data.mm  DataCpp.java  Iterator.hpp  JNIDataCpp.cpp  JNIDataCpp.hpp  LinkedList.hpp  Map.hpp  Number.cpp  Number.hpp  Optional.hpp  SharedPtr.hpp  String.hpp  Stringify.cpp  Stringify.hpp  Traits.hpp  URL.cpp  URL.hpp  Variant.hpp
src/fgl/error/: Error.cpp  Error.hpp
src/fgl/jni/: DataCpp.java
src/fgl/time/: Date.cpp  Date.hpp  DateFormatter.cpp  DateFormatter.hpp  DateTime.cpp  DateTime.hpp  TimeZone.cpp  TimeZone.hpp
src/fgl/util/: JNI.h  NAPI.h  NAPI_undef.h  ObjectiveCpp.h  PlatformChecks.hpp
src/test/: DataCppTests.cpp  DataCppTests.hpp  main.cpp
